# Parm-6DOF-Robotic-arm

./: README.md
parm_com/: CMakeLists.txt  manual_arm_control.py  package.xml
parm_com/parm_com/: hardware_emulator.py  parm_com_node.py
parm_ctrl/: CMakeLists.txt  package.xml  parm_ctrl.py
parm_ctrl/launch/: ee_to_joint.launch.py  robot_control.launch.py
parm_ctrl/parm_ctrl/: ee_to_joint.py  keyboard_pose_ctrl.py
parm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
parm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  moveit_planning_pipelines.yaml  robot.ros2_control.xacro  robot.srdf  robot.urdf.xacro  ros2_controllers.yaml  sensors_3d.yaml
parm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  parm_ik.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
parm_urdf/: CMakeLists.txt  package.xml
parm_urdf/description/: Parm.urdf  Parm.urdf.xacro  materials.xacro
parm_urdf/launch/: rsp.launch.py
parm_urdf/meshes/: ax1_ax2_link_1.stl  ax2_ax3_link_1.stl  ax3_ax4_link_1.stl  ax4_ax5_link_1.stl  ax4_ax5_link_2.stl  ax5_ax6_link_1.stl  ax6_gripper_link_1.stl  base_link.stl
