<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>parm_ctrl</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="temp@gmail.com">temp</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>parm_moveit_config</depend>
  <depend>moveit_configs_utils</depend>
  <depend>launch_param_builder</depend>
  <depend>moveit_common</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_move_group</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>